--- a/.github/workflows/moduloYAML.yml
+++ b/.github/workflows/moduloYAML.yml
@@ -1,4 +1,4 @@
-name: Workflow
+name: .NET Workflow
 
 on:
   push:
@@ -15,6 +15,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1.201'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build --no-restore
 
       - name: Run custom script
         run: |
